2012-04-07 Armin K. <krejzi@email.com>
   * Added NetworkManager bootscript.

2012-04-06 Armin K. <krejzi@email.com>
   * Rewrote cyrus-sasl script to be compatible with LFS 7.0+.
     This was done earlier, but no changelog entry was added.

   * Rewrote openldap script to be compatible with LFS 7.0+.

   * Rewrote kerberos script to be compatible with LFS 7.0+.

2012-04-05 Ken Moffat <ken@linuxfromscratch.org>
   * Update postgresql to the new style.

   * Fix the nfs-server - from 'Crider' in ticket #3325.

2012-03-10 DJ Lucas <dj@linuxfromscratch.org>
   * Fix dependency information for postfix script.

2012-02-09 Wayne Blaszczyk <wblaszcz@linuxfromscratch.org>
   * Added avahi script and modified the Makefile accordingly

2011-12-12 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix Makefile for httpd for consistency

2011-12-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Updated most scripts to be combatible with LFS 7.0.
     See http://wiki.linuxfromscratch.org/blfs/browser/trunk/bootscripts
     for specific changes.

2010-08-25 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Modified the ntp startup script to only run
     nppd -gx

2009-03-02 Randy McMurchy <randy@linuxfromscratch.org>
   * Modified the D-BUS boot script "stop" section so that the PID
     file is removed when the daemon is stopped.

2008-08-12 Thomas Trepl <thomas@linuxfromscratch.org>
   * Fix a mistyped variable name in Samba init script which
     causes the reload action to fail.

2008-03-25 Randy McMurchy <randy@linuxfromscratch.org>
   * Updated the Stunnel init script to reflect that upstream has
     moved the stunnel binary from /usr/sbin to /usr/bin.

2008-03-15 Alexander E. Patrakov <alexander@linuxfromscratch.org>
   * Imported the new pppoe service script from the LiveCD repository.

2008-03-12 Dan Nicholson <dnicholson@linuxfromscratch.org>
   * Revert usage of pid files from a few commits ago except for
     samba, which needs to know the correct process to kill. See